haggle/src/apps/filegenerate/haggle.py


# /usr/local/include/libhaggle/dataobject.h: 133
if hasattr(_libs['haggle'], 'haggle_dataobject_free'):
    haggle_dataobject_free = _libs['haggle'].haggle_dataobject_free
    haggle_dataobject_free.argtypes = [POINTER(struct_dataobject)]
    haggle_dataobject_free.restype = None

# /usr/local/include/libhaggle/dataobject.h: 144
if hasattr(_libs['haggle'], 'haggle_dataobject_calculate_id'):
    haggle_dataobject_calculate_id = _libs['haggle'].haggle_dataobject_calculate_id
    haggle_dataobject_calculate_id.argtypes = [POINTER(struct_dataobject), POINTER(dataobject_id_t)]
    haggle_dataobject_calculate_id.restype = c_int

# /usr/local/include/libhaggle/dataobject.h: 154
if hasattr(_libs['haggle'], 'haggle_dataobject_set_flags'):
    haggle_dataobject_set_flags = _libs['haggle'].haggle_dataobject_set_flags
    haggle_dataobject_set_flags.argtypes = [POINTER(struct_dataobject), c_ushort]
    haggle_dataobject_set_flags.restype = c_ushort

# /usr/local/include/libhaggle/dataobject.h: 163
if hasattr(_libs['haggle'], 'haggle_dataobject_unset_flags'):
    haggle_dataobject_unset_flags = _libs['haggle'].haggle_dataobject_unset_flags
    haggle_dataobject_unset_flags.argtypes = [POINTER(struct_dataobject), c_ushort]
    haggle_dataobject_unset_flags.restype = c_ushort

# /usr/local/include/libhaggle/dataobject.h: 172
if hasattr(_libs['haggle'], 'haggle_dataobject_set_createtime'):
    haggle_dataobject_set_createtime = _libs['haggle'].haggle_dataobject_set_createtime
    haggle_dataobject_set_createtime.argtypes = [POINTER(struct_dataobject), POINTER(struct_timeval)]
    haggle_dataobject_set_createtime.restype = c_int

# /usr/local/include/libhaggle/dataobject.h: 180
if hasattr(_libs['haggle'], 'haggle_dataobject_get_data_size'):
    haggle_dataobject_get_data_size = _libs['haggle'].haggle_dataobject_get_data_size
    haggle_dataobject_get_data_size.argtypes = [POINTER(struct_dataobject), POINTER(c_size_t)]
    haggle_dataobject_get_data_size.restype = c_int

# /usr/local/include/libhaggle/dataobject.h: 192
if hasattr(_libs['haggle'], 'haggle_dataobject_read_data_start'):
    haggle_dataobject_read_data_start = _libs['haggle'].haggle_dataobject_read_data_start
    haggle_dataobject_read_data_start.argtypes = [POINTER(struct_dataobject)]
    haggle_dataobject_read_data_start.restype = c_int

# /usr/local/include/libhaggle/dataobject.h: 202
if hasattr(_libs['haggle'], 'haggle_dataobject_read_data_stop'):
    haggle_dataobject_read_data_stop = _libs['haggle'].haggle_dataobject_read_data_stop
    haggle_dataobject_read_data_stop.argtypes = [POINTER(struct_dataobject)]
    haggle_dataobject_read_data_stop.restype = c_int

# /usr/local/include/libhaggle/dataobject.h: 211
if hasattr(_libs['haggle'], 'haggle_dataobject_read_data'):
    haggle_dataobject_read_data = _libs['haggle'].haggle_dataobject_read_data
    haggle_dataobject_read_data.argtypes = [POINTER(struct_dataobject), POINTER(None), c_size_t]
    haggle_dataobject_read_data.restype = c_ptrdiff_t

# /usr/local/include/libhaggle/dataobject.h: 230
if hasattr(_libs['haggle'], 'haggle_dataobject_get_data_all'):
    haggle_dataobject_get_data_all = _libs['haggle'].haggle_dataobject_get_data_all
    haggle_dataobject_get_data_all.argtypes = [POINTER(struct_dataobject)]
    haggle_dataobject_get_data_all.restype = POINTER(None)

# /usr/local/include/libhaggle/dataobject.h: 240
if hasattr(_libs['haggle'], 'haggle_dataobject_get_raw'):
    haggle_dataobject_get_raw = _libs['haggle'].haggle_dataobject_get_raw
    haggle_dataobject_get_raw.argtypes = [POINTER(struct_dataobject)]
    haggle_dataobject_get_raw.restype = POINTER(c_ubyte)

# /usr/local/include/libhaggle/dataobject.h: 241
if hasattr(_libs['haggle'], 'haggle_dataobject_get_raw_length'):
    haggle_dataobject_get_raw_length = _libs['haggle'].haggle_dataobject_get_raw_length
    haggle_dataobject_get_raw_length.argtypes = [POINTER(struct_dataobject)]
    haggle_dataobject_get_raw_length.restype = c_size_t

# /usr/local/include/libhaggle/dataobject.h: 254
if hasattr(_libs['haggle'], 'haggle_dataobject_get_raw_alloc'):
    haggle_dataobject_get_raw_alloc = _libs['haggle'].haggle_dataobject_get_raw_alloc
    haggle_dataobject_get_raw_alloc.argtypes = [POINTER(struct_dataobject), POINTER(POINTER(c_ubyte)), POINTER(c_size_t)]
    haggle_dataobject_get_raw_alloc.restype = c_int

# /usr/local/include/libhaggle/dataobject.h: 255
class struct_metadata(Structure):
    pass

# /usr/local/include/libhaggle/dataobject.h: 255
if hasattr(_libs['haggle'], 'haggle_dataobject_to_metadata'):
    haggle_dataobject_to_metadata = _libs['haggle'].haggle_dataobject_to_metadata
    haggle_dataobject_to_metadata.argtypes = [POINTER(struct_dataobject)]
    haggle_dataobject_to_metadata.restype = POINTER(struct_metadata)

# /usr/local/include/libhaggle/dataobject.h: 270
if hasattr(_libs['haggle'], 'haggle_dataobject_get_filename'):
    haggle_dataobject_get_filename = _libs['haggle'].haggle_dataobject_get_filename
    haggle_dataobject_get_filename.argtypes = [POINTER(struct_dataobject)]
    if sizeof(c_int) == sizeof(c_void_p):
        haggle_dataobject_get_filename.restype = ReturnString
    else:
        haggle_dataobject_get_filename.restype = String
        haggle_dataobject_get_filename.errcheck = ReturnString

# /usr/local/include/libhaggle/dataobject.h: 271
if hasattr(_libs['haggle'], 'haggle_dataobject_set_filename'):
    haggle_dataobject_set_filename = _libs['haggle'].haggle_dataobject_set_filename
    haggle_dataobject_set_filename.argtypes = [POINTER(struct_dataobject), String]
    if sizeof(c_int) == sizeof(c_void_p):
        haggle_dataobject_set_filename.restype = ReturnString
    else:
        haggle_dataobject_set_filename.restype = String
        haggle_dataobject_set_filename.errcheck = ReturnString

# /usr/local/include/libhaggle/dataobject.h: 281
if hasattr(_libs['haggle'], 'haggle_dataobject_get_filepath'):
    haggle_dataobject_get_filepath = _libs['haggle'].haggle_dataobject_get_filepath
    haggle_dataobject_get_filepath.argtypes = [POINTER(struct_dataobject)]
    if sizeof(c_int) == sizeof(c_void_p):
        haggle_dataobject_get_filepath.restype = ReturnString
    else:
        haggle_dataobject_get_filepath.restype = String
        haggle_dataobject_get_filepath.errcheck = ReturnString

# /usr/local/include/libhaggle/dataobject.h: 282
if hasattr(_libs['haggle'], 'haggle_dataobject_set_filepath'):
    haggle_dataobject_set_filepath = _libs['haggle'].haggle_dataobject_set_filepath
    haggle_dataobject_set_filepath.argtypes = [POINTER(struct_dataobject), String]
    if sizeof(c_int) == sizeof(c_void_p):
        haggle_dataobject_set_filepath.restype = ReturnString
    else:
        haggle_dataobject_set_filepath.restype = String
        haggle_dataobject_set_filepath.errcheck = ReturnString

# /usr/local/include/libhaggle/dataobject.h: 297
if hasattr(_libs['haggle'], 'haggle_dataobject_add_hash'):
    haggle_dataobject_add_hash = _libs['haggle'].haggle_dataobject_add_hash
    haggle_dataobject_add_hash.argtypes = [POINTER(struct_dataobject)]
    haggle_dataobject_add_hash.restype = c_int

# /usr/local/include/libhaggle/dataobject.h: 309
if hasattr(_libs['haggle'], 'haggle_dataobject_set_thumbnail'):
    haggle_dataobject_set_thumbnail = _libs['haggle'].haggle_dataobject_set_thumbnail
    haggle_dataobject_set_thumbnail.argtypes = [POINTER(struct_dataobject), String, c_size_t]
    haggle_dataobject_set_thumbnail.restype = c_int

# /usr/local/include/libhaggle/dataobject.h: 318
if hasattr(_libs['haggle'], 'haggle_dataobject_read_thumbnail'):
    haggle_dataobject_read_thumbnail = _libs['haggle'].haggle_dataobject_read_thumbnail
    haggle_dataobject_read_thumbnail.argtypes = [POINTER(struct_dataobject), String, c_size_t]
    haggle_dataobject_read_thumbnail.restype = c_ptrdiff_t

# /usr/local/include/libhaggle/dataobject.h: 331
if hasattr(_libs['haggle'], 'haggle_dataobject_get_thumbnail_size'):
    haggle_dataobject_get_thumbnail_size = _libs['haggle'].haggle_dataobject_get_thumbnail_size
    haggle_dataobject_get_thumbnail_size.argtypes = [POINTER(struct_dataobject), POINTER(c_size_t)]
    haggle_dataobject_get_thumbnail_size.restype = c_int

# /usr/local/include/libhaggle/dataobject.h: 341
if hasattr(_libs['haggle'], 'haggle_dataobject_add_attribute'):
    haggle_dataobject_add_attribute = _libs['haggle'].haggle_dataobject_add_attribute
    haggle_dataobject_add_attribute.argtypes = [POINTER(struct_dataobject), String, String]
    haggle_dataobject_add_attribute.restype = c_int

# /usr/local/include/libhaggle/dataobject.h: 350
if hasattr(_libs['haggle'], 'haggle_dataobject_add_attribute_weighted'):
    haggle_dataobject_add_attribute_weighted = _libs['haggle'].haggle_dataobject_add_attribute_weighted
    haggle_dataobject_add_attribute_weighted.argtypes = [POINTER(struct_dataobject), String, String, c_ulong]
    haggle_dataobject_add_attribute_weighted.restype = c_int

# /usr/local/include/libhaggle/dataobject.h: 357
if hasattr(_libs['haggle'], 'haggle_dataobject_get_num_attributes'):
    haggle_dataobject_get_num_attributes = _libs['haggle'].haggle_dataobject_get_num_attributes
    haggle_dataobject_get_num_attributes.argtypes = [POINTER(struct_dataobject)]
    haggle_dataobject_get_num_attributes.restype = c_ulong

# /usr/local/include/libhaggle/dataobject.h: 367
if hasattr(_libs['haggle'], 'haggle_dataobject_get_attribute_n'):
    haggle_dataobject_get_attribute_n = _libs['haggle'].haggle_dataobject_get_attribute_n
    haggle_dataobject_get_attribute_n.argtypes = [POINTER(struct_dataobject), c_ulong]
    haggle_dataobject_get_attribute_n.restype = POINTER(struct_attribute)

# /usr/local/include/libhaggle/dataobject.h: 377
if hasattr(_libs['haggle'], 'haggle_dataobject_get_attribute_by_name'):
    haggle_dataobject_get_attribute_by_name = _libs['haggle'].haggle_dataobject_get_attribute_by_name
    haggle_dataobject_get_attribute_by_name.argtypes = [POINTER(struct_dataobject), String]
    haggle_dataobject_get_attribute_by_name.restype = POINTER(struct_attribute)

# /usr/local/include/libhaggle/dataobject.h: 387
if hasattr(_libs['haggle'], 'haggle_dataobject_get_attribute_by_name_n'):
    haggle_dataobject_get_attribute_by_name_n = _libs['haggle'].haggle_dataobject_get_attribute_by_name_n
    haggle_dataobject_get_attribute_by_name_n.argtypes = [POINTER(struct_dataobject), String, c_ulong]
    haggle_dataobject_get_attribute_by_name_n.restype = POINTER(struct_attribute)

# /usr/local/include/libhaggle/dataobject.h: 397
if hasattr(_libs['haggle'], 'haggle_dataobject_get_attribute_by_name_value'):
    haggle_dataobject_get_attribute_by_name_value = _libs['haggle'].haggle_dataobject_get_attribute_by_name_value
    haggle_dataobject_get_attribute_by_name_value.argtypes = [POINTER(struct_dataobject), String, String]
    haggle_dataobject_get_attribute_by_name_value.restype = POINTER(struct_attribute)

# /usr/local/include/libhaggle/dataobject.h: 407
if hasattr(_libs['haggle'], 'haggle_dataobject_get_attributelist'):
    haggle_dataobject_get_attributelist = _libs['haggle'].haggle_dataobject_get_attributelist
    haggle_dataobject_get_attributelist.argtypes = [POINTER(struct_dataobject)]
    haggle_dataobject_get_attributelist.restype = POINTER(struct_attributelist)

# /usr/local/include/libhaggle/dataobject.h: 420
if hasattr(_libs['haggle'], 'haggle_dataobject_remove_attribute'):
    haggle_dataobject_remove_attribute = _libs['haggle'].haggle_dataobject_remove_attribute
    haggle_dataobject_remove_attribute.argtypes = [POINTER(struct_dataobject), POINTER(struct_attribute)]
    haggle_dataobject_remove_attribute.restype = c_int
